WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165216
REGRESSION (
r209144
): API test IndexedDB.DeleteRecovery failing
https://bugs.webkit.org/show_bug.cgi?id=165216
Summary
REGRESSION (r209144): API test IndexedDB.DeleteRecovery failing
Ryan Haddad
Reported
2016-11-30 13:30:51 PST
FAIL IndexedDB.DeleteRecovery /Volumes/Data/slave/yosemite-release/build/Tools/TestWebKitAPI/Tests/WebKit2Cocoa/IDBDeleteRecovery.mm:83 Value of: [lastScriptMessage body] Actual: "Error deleting database" Expected: @"Deleted database" Which is: "Deleted database"
https://build.webkit.org/builders/Apple%20Yosemite%20Release%20WK1%20%28Tests%29/builds/19973
Attachments
Crash log
(40.06 KB, application/octet-stream)
2016-11-30 13:34 PST
,
Ryan Haddad
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2016-11-30 13:31:01 PST
Seems to have started with
https://trac.webkit.org/changeset/209144
Ryan Haddad
Comment 2
2016-11-30 13:34:38 PST
Created
attachment 295753
[details]
Crash log Pulled this crash log from one of the bots, I think it lines up with the time that the API test failed.
Ryan Haddad
Comment 3
2016-11-30 14:19:11 PST
(In reply to
comment #2
)
> Created
attachment 295753
[details]
> Crash log > > Pulled this crash log from one of the bots, I think it lines up with the > time that the API test failed.
Yep, seeing this on other bots I checked too. Thread 7 Crashed:: IndexedDatabase Server 0 com.apple.WebCore 0x0000000112e6a3cd WebCore::SQLiteDatabase::close() + 13 (SQLiteDatabase.cpp:129) 1 com.apple.WebCore 0x0000000112e6d466 WebCore::IDBServer::SQLiteIDBBackingStore::closeSQLiteDB() + 86 (SQLiteIDBBackingStore.cpp:2397) 2 com.apple.WebCore 0x0000000112e70d19 WebCore::IDBServer::SQLiteIDBBackingStore::getOrEstablishDatabaseInfo(WebCore::IDBDatabaseInfo&) + 1721 (SQLiteIDBBackingStore.cpp:759) 3 com.apple.WebCore 0x000000011302becb WebCore::IDBServer::UniqueIDBDatabase::deleteBackingStore(WebCore::IDBDatabaseIdentifier const&) + 139 (UniqueIDBDatabase.cpp:249) 4 com.apple.WebCore 0x0000000113034b2e WebCore::IDBServer::UniqueIDBDatabase::executeNextDatabaseTask() + 46 (UniqueIDBDatabase.cpp:1716) 5 com.apple.WebCore 0x0000000112436679 WebCore::IDBServer::IDBServer::databaseRunLoop() + 73 (memory:2656) 6 com.apple.WebCore 0x0000000112435139 WebCore::IDBServer::IDBServer::databaseThreadEntry(void*) + 9 7 com.apple.JavaScriptCore 0x000000011178e802 WTF::threadEntryPoint(void*) + 178 (Threading.cpp:61) 8 com.apple.JavaScriptCore 0x000000011178ebdf WTF::wtfThreadEntryPoint(void*) + 15 (ThreadingPthreads.cpp:166) 9 libsystem_pthread.dylib 0x00007fff8d1e299d _pthread_body + 131 10 libsystem_pthread.dylib 0x00007fff8d1e291a _pthread_start + 168 11 libsystem_pthread.dylib 0x00007fff8d1e0351 thread_start + 13
Brady Eidson
Comment 4
2016-11-30 15:36:58 PST
Easy to reproduce locally. Taking a look.
Brady Eidson
Comment 5
2016-11-30 15:40:29 PST
Just an invalid ASSERT.
Brady Eidson
Comment 6
2016-11-30 15:54:02 PST
https://trac.webkit.org/changeset/209160
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug