REGRESSION (r209144): API test IndexedDB.DeleteRecovery failing. https://bugs.webkit.org/show_bug.cgi?id=165216

Rubberstamped by Tim Horton.

* Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
(WebCore::IDBServer::SQLiteIDBBackingStore::closeSQLiteDB): Change invalid ASSERT into a null check.

Canonical link: https://commits.webkit.org/182846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209160 268f45cc-cd09-0410-ab3c-d52691b4dbfc